# claude-session-monitor

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  TROUBLESHOOTING.md  claude_client.py  claude_client_standalone.py  claude_monitor_smart.py  daemon_runner.sh  pyproject.toml  run_daemon.py  test_daemon.py  test_daemon_comparison.py  test_subprocess.py
.claude/: settings.example.json  settings.local.json
config/: com.claude.monitor.daemon.plist
docs/: claude_activity_log.md  project_cache.md
hooks/: activity_hook.py  claude_hooks_config.json  hook_utils.py  notification_hook.py  stop_hook.py
scripts/: ccusage_wrapper.sh  daemon_wrapper.sh  install_cron.sh  install_daemon.sh  reload_daemon.sh  uninstall_cron.sh  uninstall_daemon.sh
spec/: claude-hooks-integration.md  deamon.memory.md  mem.project-name-caching-system.md  memory.daemon.refactor.md  memory.hooks.md  memory.hotfix.md  memory.ulepszenie-sesjii.md  project-name-caching-system.md  refaktoryzacja-architektury-daemon-klient.md  todo.md  ulepszenia-sesji-monitoringu.md
src/: claude_client_standalone.py
tests/: test_activity_session_data.py  test_claude_client.py  test_daemon.py  test_daemon_notification_integration.py  test_data_collector.py  test_data_collector_corrected.py  test_data_collector_integration.py  test_data_models.py  test_data_reader.py  test_display_manager.py  test_file_manager.py  test_git_resolver.py  test_hook_constants.py  test_hook_integration.py  test_hook_log_parser.py  test_hook_logger.py  test_hook_utils.py  test_json_schema.py  test_memory_management.py  test_project_models.py  (+9 more)
(+40 files in other folders)
